<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/addbg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:layout_marginTop="40dp"
        android:text="@string/kitapekle" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@drawable/radius"
        android:padding="15dp">


        <EditText
            android:id="@+id/bookName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/etextrad"
            android:padding="3dp" />

        <Button
            android:id="@+id/cameraOpen"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/bookName"
            android:text="@string/resimsec"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton" />

        <ImageView
            android:id="@+id/imageViewBook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/bookName"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/cameraOpen"
            android:layout_toStartOf="@+id/cameraOpen"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editTextExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cameraOpen"
            android:layout_marginTop="5dp"
            android:background="@drawable/etextrad"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:lines="5"
            android:padding="3dp"
            android:layout_above="@+id/linearLayout" />

        <EditText
            android:id="@+id/textViewYazar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextExplanation"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/bookName"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/imageViewBook"
            android:layout_toStartOf="@+id/imageViewBook"
            android:gravity="center"
            android:hint="@string/yazar"
            android:textColor="@android:color/black"
            android:textSize="12sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">
            <Button
                android:id="@+id/newBookAdd"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/addbook"
                android:textColor="@android:color/white"
                android:theme="@style/MyButton"
                android:layout_toEndOf="@+id/deleteBook"
                android:layout_toRightOf="@+id/deleteBook" />
            <Button
                android:id="@+id/deleteBook"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/deleteBook"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:theme="@style/MyButton" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>